# testOcct

./: .clang-format  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md
hooks/: utf8_check.py
src/: CMakeLists.txt
src/00_minimal/: CMakeLists.txt  main.cpp
src/01_io/: CMakeLists.txt  main.cpp
